# core

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  20260224_msan.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMPILATION_FIX_SUMMARY.md  COMPILATION_STATUS.md  CPPLINT.cfg  CTestConfig.cmake  MANIFEST.in  MISSING_DATA_STRUCTURES.md  MIXED_MAPPING_USAGE.md  README.md  TESTING_METHODOLOGY.md  bench_distributed_compose.yaml  bench_distributed_hostfile  build_act.sh  codecov.yml  coroutines.md  cte_depth_compose.yaml  cte_kvcache_compose.yaml  cte_qdrant_compose.yaml  globus_matsci_test_result.md  install  install.sh  intel_gpu_sycl_support.md  kill  pyproject.toml  qtest.sh  run_e2e_gpu_fixed.sh  run_e2e_kvcache_test.sh  run_kvcache_tests.sh  setup.py  test_mixed_mapping.cc
CI/external_tests/cuda_uvm/: CMakeLists.txt  test_link.cu
context-assimilation-engine/: CMakeLists.txt  README.md
context-assimilation-engine/config/: README.md  wrp_config_example.yaml
context-assimilation-engine/core/: CMakeLists.txt  chimaera_mod.yaml
context-assimilation-engine/core/src/: core_client.cc  core_runtime.cc
context-assimilation-engine/core/util/: wrp_cae_omni.cc
context-assimilation-engine/test/unit/: CMakeLists.txt  test_cae_comprehensive.cc  test_export_data.cc  wrp_config.yaml
context-exploration-engine/api/: CMakeLists.txt  README.md
context-exploration-engine/api/demo/: docker-compose.yml  wrp_conf.yaml
context-exploration-engine/api/src/: context_interface.cc  python_bindings.cc
context-exploration-engine/api/test/: CMakeLists.txt  test_context_bundle.cc  test_context_comprehensive.cc  test_context_destroy.cc  test_context_interface_enhanced.py  test_context_query.cc  test_context_retrieve_roundtrip.py  wrp_config.yaml
context-exploration-engine/iowarp-cei-mcp/: README.md  pyproject.toml  run_gemini.sh  setup_gemini.sh  test_blob_data.py  test_mcp_end_to_end.py  test_mcp_with_runtime.py
context-runtime/benchmark/: CMakeLists.txt  pi_timer.h  wrp_edge_benchmark.cc  wrp_run_thrpt_benchmark.cc
context-runtime/benchmark/bench_cdp/: CMakeLists.txt  bench_cdp.cu
context-runtime/benchmark/bench_gpu_runtime/: CMakeLists.txt  bench_gpu_runtime.cc  bench_gpu_runtime_gpu.cc  bench_gpu_runtime_min.yaml
context-runtime/compiler/: CMakeLists.txt
context-runtime/compiler/coro_tid_fix/: CMakeLists.txt  CoroTidFix.cpp
context-runtime/modules/bdev/: CMakeLists.txt  chimaera_mod.yaml
context-runtime/src/: CMakeLists.txt  chimaera.cc  chimaera_manager.cc  config_manager.cc  ipc_manager.cc  local_transfer.cc  megakernel_gpu.cc  module_manager.cc  pool_manager.cc  pool_query.cc  task.cc  task_archive.cc  task_queue.cc  types.cc  work_orchestrator.cc  work_orchestrator_gpu.cc  worker.cc
context-runtime/src/autogen/: gpu_work_orchestrator_modules.h
context-runtime/src/gpu/: work_orchestrator_gpu.cc
context-runtime/src/ipc/: ipc_cpu2cpu.cc  ipc_cpu2cpu_zmq.cc  ipc_cpu2gpu.cc  ipc_cpu2self.cc  ipc_gpu2cpu.cc
context-runtime/src/scheduler/: aliquem_dedicated_sched.cc  aliquem_symmetric_sched.cc  default_sched.cc  local_sched.cc  scheduler_factory.cc
context-runtime/test/unit/: CMakeLists.txt  test_autogen_coverage.cc  test_bdev_chimod.cc  test_buddy_benchmark_gpu.cc  test_bulk_expose_cleanup.cc  test_chimaera_compose.sh  test_chimaera_runtime.cc  test_chimaera_runtime_simple.cc  test_client_retry.cc  test_compose.cc  test_comutex.cc  test_external_client.cc  test_fire_and_forget.cc  test_flush_correctness.cc  test_future_task_cleanup.cc  test_gpu_coroutine.cu  test_gpu_runtime.cc  test_ipc_allocate_buffer.cc  test_ipc_allocate_buffer_gpu.cc  test_ipc_errors.cc  test_ipc_transport_modes.cc  test_local_task_archive.cc  test_local_transfer.cc  test_mpi_bdev_transport.cc  test_per_process_shm.cc  test_runtime_cleanup.cc  test_save_load_task.cc  test_streaming.cc  test_task_archive.cc  test_unordered_map_ll.cc  test_wait_functionality.cc  test_worker_fiber_pattern.cc
context-runtime/util/: CMakeLists.txt  chi_refresh_repo.cc  chimaera.cc  chimaera_cmd_compose.cc  chimaera_cmd_monitor.cc  chimaera_cmd_refresh_repo.cc  chimaera_cmd_runtime_start.cc  chimaera_cmd_runtime_stop.cc  chimaera_commands.h  chimaera_compose.cc  chimaera_monitor.cc  chimaera_start_runtime.cc  chimaera_stop_runtime.cc
context-runtime/wrapper/python/: CMakeLists.txt  py_wrapper.h  runtime_bindings.cc  test_monitor.py
context-transfer-engine/: CMakeLists.txt  README.md  chimaera_repo.yaml
context-transfer-engine/adapter/: CMakeLists.txt
context-transfer-engine/adapter/adios2/: CMakeLists.txt  README.md  iowarp_engine.cc  iowarp_engine.h
context-transfer-engine/adapter/filesystem/: CMakeLists.txt  filesystem.h
context-transfer-engine/adapter/hdf5_vol/: CMakeLists.txt  iowarp_vol.cc
context-transfer-engine/adapter/libfuse/: CMakeLists.txt  fuse_cte.cc  fuse_cte.h  fuse_cte.h.orig
context-transfer-engine/adapter/mpiio/: CMakeLists.txt
context-transfer-engine/adapter/posix/: CMakeLists.txt
context-transfer-engine/adapter/stdio/: CMakeLists.txt
context-transfer-engine/benchmark/: CMakeLists.txt  cte_config_gpu.yaml  cte_config_ram.yaml  wrp_cte_bench.cc  wrp_cte_bench.sh  wrp_cte_gpu_bench.cc  wrp_cte_gpu_bench_gpu.cc  wrp_cte_score_bench.cc  wrp_cte_score_bench.sh
context-transfer-engine/compressor/: CMakeLists.txt  chimaera_mod.yaml
context-transfer-engine/core/: CMakeLists.txt  chimaera_mod.yaml
context-transfer-engine/docs/: config.md  cte.md
context-transfer-engine/interceptor-ebpf/: wrp-ebpf-run.sh
context-transfer-engine/llm-hooks/: CMakeLists.txt
context-transfer-engine/uvm/: CMakeLists.txt
context-transfer-engine/wrapper/: CMakeLists.txt
installers/pip/: README.md  build_deps_manylinux.sh  iowarp_core.pth  pyproject.toml  repair_wheel.sh  test_local.sh
installers/pip/iowarp_core/: _cli.py  (+2 more)
iowarp-installer/: INSTALLER_README.md  MANIFEST.in  pyproject.toml  test_installer.sh
iowarp-installer/iowarp/: __init__.py  main.py
iowarp-llm/kvcache/: CMakeLists.txt
runtime/src/: CMakeLists.txt
tools/acropolis_depth/: CMakeLists.txt  set_depth.cc
(+868 files in other folders)
